syntax = "proto3";
package zpb;
option go_package = ".;zpb";
message Property{
    int32 type = 1;
    int32 p_int = 2;
    string  p_string = 3;
    uint64 p_float = 4;
    bool p_bool = 5;
}
message PropertyMap{
    int32 key = 1;
    Property value = 2;
}
message ADD_ENGINE_COMPONENT
{
    int32 type   = 1;
    string listen_addr = 2;
    int32 component_id = 3;
}
message ADD_ENGINE_COMPONENT_ACK
{
    int32 component_id = 1;
    repeated ADD_ENGINE_COMPONENT component_list = 2;
}
message GET_ALL_LOGIN_COMPONENT{

}
message GET_ALL_LOGIN_COMPONENT_ACK{
    repeated string login_list = 1;
}
message SYNC_PROXY_PROPERTY{
    repeated PropertyMap property_map_list = 1;
}
message SET_REMOTE_PROPERTY{
    repeated PropertyMap property_map_list = 1;
}
